Menus - Trying to fix block margin issue on mobile

--- a/src/components/pages/home/Menus.module.css
+++ b/src/components/pages/home/Menus.module.css
@@ -1,5 +1,5 @@
 .menuSection {
-	min-height: 100svh;
+	min-height: 100vh;
 	width: 85%;
 	max-width: 75rem;
 	display: flex;
